Fix legibility of contributor names in Night Shift

--- a/app/styles/app-dark.css
+++ b/app/styles/app-dark.css
@@ -297,6 +297,10 @@ input,
     background: #fff;
 }
 
+.gh-contributors a:before {
+    color: #738a94;
+}
+
 .user-cover-edit {
     color: #fff;
 }
